# AI_PLATFORM

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  app.py  config.py  entrypoint.sh  pyproject.toml
api/routes/: config.py  design.py  health.py  ops.py
crews/: add_action_crew.py  codegen_crew.py  design_crew.py  design_design_crews.py  handler_crew.py
design_frontend/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  railway.toml  tailwind.config.ts
design_frontend/app/: layout.tsx  page.tsx
design_frontend/components/: QueryProvider.tsx
design_frontend/lib/: api.ts  layout3d.ts  sse.ts  types.ts  utils.ts
design_frontend/store/: designStore.ts  eventsStore.ts
design_frontend/styles/: globals.css
doc/: schema_designer_frontend_6b69d365.plan.md  v2_schema_designer_changes.md
flows/: config_flow.py  design_excel.py  design_flow.py  ops_flow.py
flows/business/: data_query.py  general_enquiry.py  handler_execution.py  party_onboarding.py  upsert.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend-test/: index.html  package-lock.json  package.json  vite.config.ts
frontend-test/src/: api.ts  app.ts  hit-test.ts  layout-engine.ts  main.ts  (+4 more)
knowledge/: architecture.md  concepts.md  deployment.md  handler_guide.md  usage.md
models/: __init__.py  config_models.py  design_models.py  ops_models.py
setup/: knowledge_setup.py  memory_setup.py  schema_sync.py
storage/: design_store.py
tools/: __init__.py  admin.py  data_platform.py
(+53 files in other folders)
